# rs_test_aws_lambda

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rs.yml
src/: main.rs
