[package]
name = "rs_test_aws_lambda"
version = "0.1.0"
authors = ["maxjeffos <jeff.mclean@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.3.0"
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
tokio = "1.8.1"
futures = "0.3"
